--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="Welcome to the most extraordinary hotel in California"
     />
     <meta name="keywords" content="hotel, california hotel, beach hotel" />
+    <script
+      src="https://kit.fontawesome.com/3da8ed4497.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <!-- The California Hotel is for SEO -->
     <title>Hotel BT | California Hotel</title>
@@ -53,5 +57,38 @@
         <a href="about.html" class="btn btn-light">Read More</a>
       </div>
     </section>
+
+    <section id="features">
+      <div class="box bg-light">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+          consectetur?
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fas fa-utensils fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+          consectetur?
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fas fa-dumbbell fa-3x"></i>
+        <h3>Gym</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+          consectetur?
+        </p>
+      </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+      <p>Hotel BT &copy; 2020, All Rights Reserved</p>
+    </footer>
   </body>
 </html>
