--- a/about.html
+++ b/about.html
@@ -3,7 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Welcome to the most extraordinary hotel in California"
+    />
+    <meta name="keywords" content="hotel, california hotel, beach hotel" />
+
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- The California Hotel is for SEO -->
+    <title>Hotel BT | About</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="container">
+          <h1 class="logo"><a href="index.html">CA Hotel</a></h1>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="current" href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <section id="about-info" class="bg-light py-3">
+      <div class="container">
+        <div class="info-left">
+          <h1 class="l-heading">
+            <span class="text-primary">About</span> Hotel CA
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores
+            dolorem aperiam debitis omnis placeat labore modi! Quae pariatur
+            placeat dolorem voluptatum labore? In placeat numquam laborum
+            corporis, et tenetur officiis?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
+            in ut corrupti hic quisquam ad quasi maxime est. Doloribus, nihil?
+          </p>
+        </div>
+        <div class="info-right">
+          <img src="./img/photo-2.jpg" alt="hotel" />
+        </div>
+      </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <section id="testimonials" class="py-3">
+      <div class="container">
+        <h2 class="l-heading">What Our Guests Say</h2>
+        <div class="testimonial bg-primary">
+          <img src="./img/person-1.jpg" alt="Luna" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, tempora
+            illum ab voluptates nulla rerum esse aliquid, vitae repellendus
+            distinctio autem officiis molestiae dolorum perferendis consectetur
+            quae dolore natus exercitationem officia sint nostrum vero quod.
+            Possimus doloribus vitae corporis doloremque!
+          </p>
+        </div>
+        <div class="testimonial bg-primary">
+          <img src="./img/person-2.jpg" alt="Lulu" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, tempora
+            illum ab voluptates nulla rerum esse aliquid, vitae repellendus
+            distinctio autem officiis molestiae dolorum perferendis consectetur
+            quae dolore natus exercitationem officia sint nostrum vero quod.
+            Possimus doloribus vitae corporis doloremque!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer id="main-footer">
+      <p>Hotel BT &copy; 2020, All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
