--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <label for="message">Message</label>
             <textarea type="text" name="message" id="message"></textarea>
           </div>
-          <button type="submit" class="btn">Submit</button>
+          <button type="submit" id="btn">Submit</button>
         </form>
       </div>
     </section>
@@ -78,5 +78,6 @@
     <footer id="main-footer">
       <p>Hotel BT &copy; 2020, All Rights Reserved</p>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
