--- a/about.html
+++ b/about.html
@@ -10,6 +10,11 @@
     <meta name="keywords" content="hotel, california hotel, beach hotel" />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <!-- The California Hotel is for SEO -->
     <title>Hotel BT | About</title>
   </head>
