--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,11 @@
     <meta name="keywords" content="hotel, california hotel, beach hotel" />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <script
       src="https://kit.fontawesome.com/3da8ed4497.js"
       crossorigin="anonymous"
