--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <!-- The California Hotel is for SEO -->
     <title>Hotel BT | California Hotel</title>
   </head>
